--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tsx": "^4.7.0"
   },
   "dependencies": {
+    "@fastify/cookie": "^9.3.1",
     "@prisma/client": "5.9.1",
     "fastify": "^4.26.0",
     "typescript": "^5.3.3",
